--- a/src/style.css
+++ b/src/style.css
@@ -85,6 +85,119 @@ header {
   transform: translate(-50%, -50%);
 }
 
+#modal {
+  position: fixed;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal_root > h1 {
+  font-size: 48px;
+  color: #ffffff;
+  text-align: center;
+  margin: 16px 0px;
+}
+
+.modal_container {
+  max-width: 720px;
+  max-height: 560px;
+  background-color: #ffffff;
+  border-radius: 25px;
+  overflow: hidden;
+  display: flex;
+}
+
+.left_container {
+  width: 55%;
+}
+
+.left_container > img {
+  width: 100%;
+}
+
+.right_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 45%;
+}
+
+.right_container > h2 {
+  font-size: 32px;
+  margin-bottom: 12px;
+}
+
+.items_container {
+  width: 100%;
+}
+
+.item_root {
+  display: flex;
+  flex-direction: column;
+  padding: 0 22px 12px 22px;
+}
+
+.item_root > h3 {
+  text-align: right;
+}
+
+.easy {
+  color: #81bd81;
+}
+
+.medium {
+  color: #e2bb71;
+}
+
+.hard {
+  color: #e65a5a;
+}
+
+.item_container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.item_img {
+  max-height: 80px;
+  width: auto;
+}
+
+.item_description {
+  text-align: center;
+}
+
+.start_btn {
+  cursor: pointer;
+  max-width: 142px;
+  max-height: 60px;
+  font-size: 32px;
+  color: #ffffff;
+  border-radius: 25px;
+  border: none;
+  padding: 8px 24px;
+  background-image: linear-gradient(to right, #2a2c80, #fd1d1d, #fcb045);
+}
+
+.item_container,
+.start_btn {
+  transition: all 300ms ease;
+}
+
+.item_container:hover,
+.start_btn:hover {
+  transform: scale(1.1);
+}
+
 footer {
   background-color: #0e0c31;
   color: #ffffff;
