--- a/src/style.css
+++ b/src/style.css
@@ -106,8 +106,8 @@ header {
 }
 
 .modal_container {
-  max-width: 720px;
-  max-height: 560px;
+  width: 720px;
+  height: 560px;
   background-color: #ffffff;
   border-radius: 25px;
   overflow: hidden;
@@ -176,7 +176,7 @@ header {
   text-align: center;
 }
 
-.start_btn {
+.btn {
   cursor: pointer;
   max-width: 142px;
   max-height: 60px;
@@ -189,12 +189,12 @@ header {
 }
 
 .item_container,
-.start_btn {
+.btn {
   transition: all 300ms ease;
 }
 
 .item_container:hover,
-.start_btn:hover {
+.btn:hover {
   transform: scale(1.1);
 }
 
