Added restart game feature to header

--- a/src/style.css
+++ b/src/style.css
@@ -21,6 +21,10 @@ header {
   text-align: center;
 }
 
+.title {
+  cursor: pointer;
+}
+
 .red {
   color: #ff0000;
 }
@@ -188,11 +192,13 @@ header {
   background-image: linear-gradient(to right, #2a2c80, #fd1d1d, #fcb045);
 }
 
+.title,
 .item_container,
 .btn {
   transition: all 300ms ease;
 }
 
+.title:hover,
 .item_container:hover,
 .btn:hover {
   transform: scale(1.1);
