--- a/src/style.css
+++ b/src/style.css
@@ -153,7 +153,6 @@ header {
 }
 
 .right_container > h2 {
-  font-size: 32px;
   margin-bottom: 12px;
 }
 
@@ -218,7 +217,7 @@ header {
   cursor: pointer;
   max-width: 142px;
   max-height: 60px;
-  font-size: 32px;
+  font-size: 24px;
   color: #ffffff;
   border-radius: 25px;
   border: none;
@@ -247,6 +246,20 @@ header {
   font-size: 22px;
   padding-left: 32px;
   list-style-position: outside;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  align-items: center;
+}
+
+input {
+  border: 1px solid;
+  border-radius: 5px;
+  outline: none;
+  padding: 5px;
 }
 
 footer {
